⟨0.28⟩ a flag-shaped token after a value-taking flag is NO VALUE — and the sink it names is still a sink
Conformance §3.1 (b13): `candor <target> --policy --gate-json -` must
exit 2 with the fail-closed refusal document on the stream. Measured on
this engine: exit 2, NOTHING on stdout — the pre-pass and loop both
consumed `--gate-json` as the policy FILENAME, so the verdict sink the
operator named was never registered, never armed, never written.

The row had been passing on the DISAGREEMENT the pre-pass alignment
removed (the pre-pass skipped the flag-shaped token, keeping the sink,
while the loop ate it); the alignment was right in direction and exposed
that the shared reading was fail-open. SPEC §3.2 ⟨0.28⟩ now rules which
side was wrong: a value-taking flag whose next token begins with `--`
has been GIVEN NO VALUE — consuming it as a filename makes that very
cause unreachable (no argv can produce it) and is the §6.2 silent
reinterpretation one position over. Usage error at exit 2, and the sinks
named ELSEWHERE in that argv are still sinks: a broken command line, not
a redefined one.

Every value-taking flag on every route gets the rule (the sibling-route
habit: five scan CLIs and zero gate verbs is how this project has been
burned): the scan path's `--policy` (pre-pass + loop; `--json`/
`--gate-json` already refused flag-shaped values), the `gate`/query
loop's `--report`, `--policy` and `--class` plus its pre-pass agreement,
`selftest-reentrant`'s `--json`, and `verify`'s `--run`/`--report`/
`--scope`. The pre-pass leaves a refused token LIVE, so a sink after the
broken flag is armed (file placeholder, or the `-` shutdown hook) before
the usage exit fires. A bare `-` stays a legitimate value; `./--weird`
spells a file genuinely named like a flag.

Two tests pinned the overturned premise (a sink after the broken flag
"was never accepted", so nothing could be armed/written there) and are
rewritten to pin the ruling: `--policy --json X` leaves the fail-closed
place